fix: responsive issue on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,3 +7,8 @@
 :root {
   scroll-behavior: smooth;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
